# Plasma-Next-Legacy-Systemtray

./: .gitignore  CMakeLists.txt  ChangeLog  Makefile.am  configure.ac  fdtray.c  wmsystemtray.1.in  wmsystemtray.c  wmsystemtray.h
debian/: Makefile.am  README.Debian  changelog  control  copyright  menu
